# TES5-TrueFactionSystem

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  LICENSE  PCH.h  README.md  vcpkg-configuration.json  vcpkg.json
definitions/: race_values.json
esp/: TrueFactionSystem.esp
esp/Interface/skyui/TrueFactionSystem/: TFS.dds
esp/Scripts/: npeTFS_MCM.pex  npeTFS_NativeFunctions.pex
esp/Source/Scripts/: npeTFS_MCM.pex  npeTFS_MCM.psc  npeTFS_NativeFunctions.psc
include/: ActorExtensions.h  ArmorKeywordData.h  ArmorSlots.h  Config.h  DisguiseData.h  Globals.h  NpcDetectionData.h  Papyrus.h  armor_keyword_data.h  armor_slots.h  combat.h  disguise.h  disguise_data.h  disguisedata.h  faction.h  log.h  main.h  npc_detection_data.h  npcdetectiondata.h  plugin.h  race.h  rapidcsv.h
include/Actor/: NPEActor.h
include/Datahandler/: DataHandler.h
include/Disguise/: DetectionManager.h  DisguiseManager.h  EnvironmentManager.h  NPCAlertnessManager.h
include/Managers/: DetectionManager.h  DisguiseManager.h  EnvironmentManager.h  EquipmentManager.h  NPCAlertnessManager.h
include/Misc/: Utils.h
src/: ActorExtensions.cpp  ArmorKeywordData.cpp  ArmorSlots.cpp  DisguiseData.cpp  Globals.cpp  Papyrus.cpp  actor_extensions.cpp  armor_keyword_data.cpp  armor_slots.cpp  combat.cpp  disguise.cpp  disguise_data.cpp  disguisedata.cpp  faction.cpp  log.cpp  main.cpp  npcdetectiondata.cpp  plugin.cpp  race.cpp  races.cpp
src/Actor/: NPEActor.cpp
src/Datahandler/: Datahandler.cpp
src/Disguise/: DetectionManager.cpp  DisguiseManager.cpp  EnvironmentManager.cpp  NPCAlertnessManager.cpp
src/Managers/: DetectionManager.cpp  DisguiseManager.cpp  EnvironmentManager.cpp  EquipmentManager.cpp  NPCAlertnessManager.cpp
src/Misc/: Utils.cpp
tfs_definitions/: race_faction.json
